content reorganized, ready for cutting

--- a/chap2.tex
+++ b/chap2.tex
@@ -30,6 +30,317 @@
 %TODO: EDITS
 %Starr \& Bowker, standards? resonant??
 
+\section{Science Fictions, Designed Dreams}
+
+Technologies, with rare exceptions,\footnote{One could argue that
+  vulcanized rubber for example, as an accidental discovery, does not
+  fit this pattern.} are imagined before they are made, through design
+fictions and/or science fiction. These future
+visions serve a number of purposes: for example, they inspire scientists and
+engineers,\footnote{In fact I think it would be exceedingly rare to
+  find an engineer today who was not influenced by science fiction. My
+  interest in AI has been driven by \emph{Star Trek} and \emph{2001: A
+  Space Odyssey}, the latter perhaps more morbidly than the former. A
+  colleague of mine cites Neal Stephenson's
+  \emph{The Diamond Age} as key to shaping his interest in
+  computational linguistics and human-machine interfaces. Wernher von
+  Braun and other architects of the space program were deeply
+  influenced by Jules Verne, and some even wrote science fiction
+  themselves \cite[p. 2]{marketingMoon}.} they serve as design
+studies for the possible shapes of technology, and they act as
+playgrounds to investigate the cultural impacts of technologies.
+Though created in different contexts, with potentially 
+different levels of scholarly care, these two types of fiction are not
+neatly delineated, and are unified as sources of insight into what
+might be possible with technology. ``Design fiction is the cousin of
+science fiction,'' as Julian Bleecker puts it, and represents a hybrid
+practice that attempts to negotiate between facts and wild, playful
+imaginings to bring light to the multiplicity of possible
+futures \cite[p. 8]{bleecker}. It would be wrong to categorize science
+fiction as categorically less relevant, however: science fiction
+films
+often involve scientific consultants with real
+technical knowledge related to the technologies they are responsible for
+helping bring to life on screen. These depictions become what David
+Kirby calls ``diegetic prototypes'' which are used to ``demonstrate to
+large public audiences a technology's need, benevolence and
+viability'' \cite[p. 43]{kirbyFuture}. Kirby connects prototypes (primary
+``driver[s] of technological innovation''---in
+Suchman's terms ``performative artefacts'' \cite[p. 45]{kirbyFuture})
+to these diegetic prototypes, 
+by recognizing both their similar rhetorical roles as well as the
+ability of diegetic prototypes to mobilize funding for real-life
+prototypes \cite[p. 44-47]{kirbyFuture}. Science fiction, then, has deep
+and compelling relationships with real engineers and engineering via
+its depiction of aspirational (or cautionary) futures.
+
+%%COnsider citing the Suchman article itself in Kirby
+
+But science fiction is also a perennial source of popular metaphors and ideas
+about technological change, in part perhaps because the visions are so
+compelling, but also because they are so easily available. While these images
+do not issue forth from a vacuum, as we have seen---coming from a potent combination
+of actual engineering and scientific developments mixed with the
+imagination---science-fiction images represent easily-digestible
+cultural reference 
+points for technological stories in the popular press. From Asimov to
+\emph{Terminator}, 
+these sorts of pictures are endemic to discussions of artificial
+intelligence in the press, and are often mobilized specifically to
+illustrate the possible forms of automated vehicles. Stories and ideas
+about what autonomous cars will be are
+influenced by \emph{Minority Report} \cite{fromHollywood}, \emph{KITT}
+\cite{wadeKITT}, and \emph{Total
+  Recall} \cite{pasdirtzSolution}. Countless articles begin by describing
+self-driving vehicles as a Hollywood or science-fiction
+staple \cite{scifiToReality}. \emph{Minority Report} is of particular
+importance in this context, not only because it is so often referenced
+but because its depiction of automated vehicles was developed in
+consultation with Harald Belker, an automotive designer responsible
+for both numerous Hollywood collaborations as well as real-world
+products \cite{melansonMinority}. But popularly referenced fictions are
+not all so contemporary. \emph{The Jetsons}, though
+the show did not actually foreground driverless vehicles, also gets
+recalled as a source of inspiration due to the role of flying cars,
+which trigger similar visions of wild 
+futures made possible through technology \cite{JetsonsAge}. 
+
+%TODO how do we dedup this?
+
+Many, indeed most, articles seem ignorant of the actual research
+history that inspires and is inspired by successive generations of
+science and design fictions. Some articles, especially from more
+scholarly establishments, bring up 
+the pioneering work done by Mercedes and Ernst
+Dickmanns in Germany in the 1990s \cite{HCRIDriverless}. But few connect
+autonomous vehicles today as part of a long research history going
+back to the 1960s, and an even longer set of engineering dreams going
+back at least to the 1920s. Such narratives would as
+valid, in their own way, as connections to science fiction, but I
+suggest that some of the ``newsworthy'' shock value of the technology would be lost
+by linking it to a deep history of research and effort. Connecting it
+instead to the dreams and aspirations of Hollywood cinema makes it
+more novel, exciting, even magical; and the few references to past
+technology projects are relegated to their symbolic value only, used
+to express a sense of impatience and technological inevitability: ``Isn't
+it about time?'' This hype-mindset fits the business
+goals of many news outlets interested primarily in page-views.
+
+The few historically-specific 
+dreams that do filter through into the narratives of autonomous
+technology \cite{CBSPetersen} 
+include the 1939 World's Fair, discussed
+in the introduction, at which auto companies
+previewed a city of the future. Its centerpiece, GM's Futurama
+exhibit, presented a bird's-eye view of a future city with multi-lane elevated
+expressways filled with largely automated vehicles. GM's Firebird concepts
+from the 1950s\footnote{Rarely mentioned are other contemporary research
+  initiatives, such as the work of
+  Vladimir Zworykin at RCA. His 
+  concept, inspired by ``railroad block signals,'' used circuits
+  embedded in the road to magnetically sense vehicle speed and
+  location. GM's working test system based on their ``Unicontrol''
+  joystick instead located much of the sensing and control within the car
+itself \cite[p. 8]{wetmore}. But this work too is not often
+remembered.} are also occasionally remembered due to their publicity
+and 
+subsequent cultural presence, \cite{walshVs} despite that the vehicles actually
+contained no autonomous technology \cite[p. 7]{wetmore}. They were
+themselves engineering fictions. DARPA's investments in automated
+driving are recalled more frequently, but largely stripped of their
+military valences and instead seen as the start of a vibrant civilian
+automated car project \cite{economistSR}.
+
+These historical moments are powerful because in their projections into the
+popular discourse, they cease to answer to logic and
+sense. They draw upon emotions, hopes, and aspirations. Driverless cars
+are in part works of theater, objects of technological spectacle which
+are not yet truly real, despite their existence as physical objects
+which can be photographed and experienced.\footnote{And in this way
+  they are similar to concept cars of other types, which are designed
+  to embody company ideals, brand languages, and generally act as
+  advertising as much as design studies for actual future vehicles.}
+Such real-world contact is 
+yet limited to a lucky few. Google hosts special press events to allow
+select journalists
+to ride in their automated vehicles. Their capabilities are touted,
+advertised, but their media picture is still tightly controlled. Not subsumed
+to the mundane, the quotidian,\footnote{Certain articles from people
+  who have actually gone for a ride in these vehicles stress the
+  boredom and mundanity that comes with operating this
+  technology \cite{rode500}. But these do not represent the
+  preponderance of coverage. It also should be noted that boredom
+  always comes with the potential of its opposite. Operating automated
+systems can involve, as Sheridan describes, ``hours of boredom
+punctuated by moments of terror'' \cite[p. 339]{sheridan}.} they still
+possess that magic that 
+makes science fiction connections obvious and compelling. But this
+does not mean such connections are unproblematic. Far from it. By
+their alignment of these vehicles to science fiction, popular
+narratives emphasize images of the technology as it has already been
+envisioned, and obscure the multitude of potential implementations
+that can emerge from engineering practice in the moment. Self-driving
+cars threaten to become natural and obvious, in a particular form,
+through their associations with existing, known and culturally
+assimilated media portrayals.
+
+Close cousins to science fiction representations, the statements of
+researchers themselves are also responsible for 
+shaping conventional narratives of autonomous vehicle
+development---through the making of their own design fictions, or
+technocultural dreams that motivate their research.
+Since automated vehicles have the potential to reshape many areas of life, it should
+be no surprise that the cross-section of researchers interested in the
+technology is broad indeed. Some are vehicle engineers (e.g. John Leonard), some of whom have been
+interviewed by the press or had their research papers picked up by news outlets.
+Others are mathematicians and
+computer scientists (e.g. Paolo Santi) working on other problems related to
+autonomous vehicle systems. And yet others are designers (e.g. Carlo
+Ratti of the SENSEable City Lab), urban
+planners, or traffic safety experts interested in how the next
+generation of vehicle systems will
+affect our cities. The breadth of people involved means a breadth of
+technical competencies. And many (though not all) of these contributions buy into the
+implicit teleological progress narrative, whether or not they expect
+driverless cars to be feasible in the market soon.
+
+One particular strain of ideas comes from those interested in the
+social benefits that would accrue if and when cars could be automated.
+Daniela Rus of MIT's CSAIL speaks of ``data-driven mobility'' and the
+idea of using the affordances of automated vehicles to improve traffic
+patterns.\footnote{Speaking at The Road Ahead Conference, hosted by
+  the MIT SENSEable City Lab, Cambridge MA, November 21, 2014.} Taking
+data from phones, road cameras, satellites, and other 
+sources already provides the potential of forecasting congestion, from
+this perspective,
+provided we ``put it all in the cloud'' so that it can be collated and
+queried at scale. While this approach allows incentivizing individuals to drive at
+different times or use different routes, widespread use of autonomous vehicles would add
+the possibility of moving vehicles around based on predicted or
+current demand, and therefore potentially reduce the number of
+vehicles needed to move people in a city. Researchers at MIT and Stanford, as part of the
+SMART\footnote{Singapore-MIT Alliance for Research and Technology} initiative, have
+performed mathematical modeling work on this topic, and found that a
+significantly smaller number of cars could supply all the mobility
+needs of Singapore if they were automated and could respond to demand.
+Specifically, their models suggest that 300,000 vehicles could serve
+all mobility needs during peak times with waits of less than 15
+minutes, and even a fleet of 200,000 vehicles could reduce wait times
+to about 3 minutes during off-peak hours \cite{frazzoliSingapore}. This
+compares to 779,890 passenger vehicles actually owned in Singapore,
+according to 2011 numbers.
+
+Along similar
+lines, Christian Zulberti of the ENEL Foundation\footnote{A non-profit
+  energy and sustainable innovation research group.} envisions using
+autonomous vehicles to remove traffic lights in
+cities.\footnote{Speaking at The Road Ahead Conference, hosted by
+  the MIT SENSEable City Lab, Cambridge MA, November 21, 2014.} And Paolo
+Santi of the MIT SENSEable City lab talks of replacing traffic lights
+with a slot-based system, using cars that can communicate with each
+other and with infrastructure to double the capacity of the
+roadway.\footnote{Speaking at The Road Ahead Conference, hosted by
+  the MIT SENSEable City Lab, Cambridge MA, November 21, 2014.} Each vehicle would request a slot to pass through the
+intersection, and would be instructed to proceed according to the
+orchestrations of a central control system---a fruition of
+Vladimir Zworykin's work at RCA from the 1950s. Singapore is engaging in
+controlled vehicle tests to work on just such ideas, to improve
+efficiency with vehicle-to-vehicle communications and predictive traffic
+patterns.\footnote{Lam Wee Shan, speaking at The Road Ahead Conference, hosted by
+  the MIT SENSEable City Lab, Cambridge MA, November 21, 2014.
+  Singapore seems to have a unique position in shaping this research,
+  due to its small size, high population density, existing vehicle
+  restrictions, and willingness to 
+  leverage itself as a technology test-bed.} As we
+might expect, these
+design concepts and stories have telling connections to each other, and
+to a web of other fictions, meshing well with the automated vehicle
+infrastructures envisioned by science fictions such as \emph{Minority Report}.
+
+Returning to reality, however, these concepts assume particular
+communicative competencies. While 
+some would seem to require fully automated vehicles, other
+visions are amenable to a variety of different types of automation.
+But all assume varying levels of persistent, networked surveillance of
+vehicle positions, and require vehicle-to-vehicle or
+vehicle-to-infrastructure communication channels to send and receive
+data and instructions. Several of these ideas also seem to present
+particularly classed views of who driverless technology would serve.
+An intersection that requires an electronic device to request a slot
+to cross will not gracefully tolerate the poor, or anyone who
+does not own a smart car or smart phone, whatever his or her age,
+race, class, or situation. Utopian visions of doubled capacity, when
+described (as this was) as halving the wait-time to get through an
+intersection, forget the complex dynamics of human behavior and our
+tendency toward homeostasis of inconvenience: city planning has found
+time and time again over the last 50 years that increasing the
+capacity of roadways does not result in less congestion, only more
+people driving \cite[p. 219]{marshallFuture}. One researcher I talked
+to put the problem in terms of Jevon's paradox: at some point,
+efficiency improvements will saturate, ``so the only true mechanism
+[of reducing congestion],
+at least the one that's been proven, through research, is pricing, is
+through taxation.''
+
+Nevertheless, these
+sorts of envisioned futures support a get-out-of-the-way rhetoric. As
+one researcher suggested to me in an interview:
+``privacy-nuts'' and ``soccer-moms'' will be disturbed by the
+technology, but we should press forward anyway. Such dismissive and
+derisive categorizations, applied nonchalantly, suggest that anyone
+getting in the way of progress is either a luddite or a fearmonger who
+does not understand the technology. 
+
+Another prominent design fiction regarding autonomous vehicles focuses
+on personal mobility, especially for the elderly or disabled. Ryan
+Chin, a notable researcher in urban mobility systems at the MIT Media
+Lab, has worked on these systems as part of the Smart Cities
+initiative. He suggests that in a world with an aging population, and
+especially in the United States given our often lacking public
+transportation infrastructure, personal mobility for a growing
+population unable to drive themselves should be one of the primary
+goals of future development.\footnote{Discussion with the author,
+  August 20, 2014.} Mobility, as an aspect of personal agency, is very important both
+for one's ability to live and provide for oneself, as well as for
+fostering independence and feelings of self-worth. As a side benefit,
+one researcher noted, providing automated mobility solutions should
+help persuade more senior citizens who can no longer drive safely to
+give up their licenses voluntarily, rather than risk a serious
+accident.\footnote{This is especially true for those who do not have a
+  family member they can count on to assist them.}
+
+This primarily automotive vision is not the only model of urban
+mobility through autonomous systems, however, and is fraught with
+certain problems. John Leonard, an MIT researcher who was involved
+with the DARPA Urban Challenge in 2007, has gone on record as a critic
+of replacing cars with driverless vehicles on existing infrastructure.
+Not only do weather conditions and negotiations with pedestrians and
+other cars present potential issues, interpreting the gestures of
+police officers and dealing with other atypical road events also make
+this a troubled vision. One alternative is the PRT, or Public Rapid
+Transit, model, which is already being deployed in certain
+geographically restricted areas. A PRT researcher I spoke to
+enumerated the benefits to the approach: separate tracks with
+controlled access greatly simplify issues of collision detection and
+negotiation with other vehicles, and reduce risks of injury from collisions if
+they occur. Of course, controlled access requires new infrastructure,
+and seems to call to mind the famous failure of the French Aramis PRT
+project, so comprehensively covered by Latour in \emph{Aramis, or the
+  Love of Technology} \cite{Aramis}. 
+
+What gives us confidence in these visions? Why don't they seem
+outlandish, like some of the works of science-fiction with which they have
+been grouped here? Some of this has to do with their manner of
+presentation, lent the gravitas of ``science'' by emanating from
+scientists rather than from the
+illusionary powers of Hollywood. 
+
+
+
+
+
+
+
 We find ourselves in an era of seemingly continual technological
 change that is strangely most noticeable in the most mundane parts of
 our lives---how we shop, how we communicate, how we find
@@ -791,64 +1102,6 @@ corner. Those working in the field are well aware of
 this \cite{sofgeAIFears}. So much current work is
 fundamentally utilitarian, building systems with clear goals, metrics
 for success, and market segments.
-
-Though computer science and philosophies of AI have been using
-``intelligence,'' ``knowledge,'' and ``understanding,'' among other
-words, to talk about computers since the beginning of the field, these
-uses should not be taken at face value. ``Intelligence'' is slippery,
-and its definition is not constant over time. It is difficult to
-define intelligence in ourselves \cite{huntIntelligence} and yet another thing to define it
-in relation to other entities. Weaving was once considered to be a
-peculiarly human capability, a sign of an advanced, intelligent
-mind \cite[p. 627]{riskinDuck}. But after Vaucanson's loom allowed mechanical devices to weave
-seemingly on their own, this capacity was no longer seen as uniquely
-human, and was no longer a marker of intelligence. The same process
-occurred with chess in the 1990s. When IBM's Deep Blue beat Gary
-Kasparov, chess ceased to be the standard by which intelligence could
-be judged, precisely because it had been achieved. Real intelligence
-had to lie elsewhere: for example, in the game Go, mastery of which
-has continued to elude machines.\footnote{``When IBM's Deep Blue beat
-  Gary Kasparov in 1997, most Artificial Intelligence researchers and
-  commentators decided that chess playing did not require intelligence
-  after all and declared a new standard, the ability to play Go'' \cite[p. 623]{riskinDuck}.}
-
-Nevertheless, machines manage to do things that \emph{seem} intelligent. So
-though these terms are heuristics for understanding the observed
-behaviors of machines, they slip slowly over time from self-conscious
-scare-quoted use into casually accepted statements. While automatic
-translation may seem ``intelligent,'' or a system that can define \emph{\'{e}toile}
-as ``star'' may seem to possess ``knowledge,'' this intelligence or
-knowledge is perhaps very different than our own. A deep
-epistemological question presents itself: how do we know, and how do
-machines ``know''? Many AI systems operate via statistical pattern
-recognition, so we may ask whether we believe human intelligence is
-also merely pattern recognition: does a system that can associate star
-with its definition really know what a star is? Is linguistic
-association sufficient for knowledge?
-
-H. R. Ekbia and others remind us that we should be skeptical of the
-applications of these terms to computational processes \cite{ekbia}. As we have
-seen, Searle's thought experiment of the ``Chinese room''
-argues that symbol processing and pattern recognition alone is not
-intelligence, though from the outside the results may appear to be
-intelligent. Despite the faults of his argument, his caution
-about ascribing overly ambitious human ideas to computational
-processes is warranted. Even Pamela McCorduck, a colleague of several
-notable AI researchers and a believer in the field in general, hedges
-on how intelligent some of the programs she discusses in \emph{Machines Who
-Think} actually are. Ornstein, Smith, and Suchman, in their 1984
-article ``Strategic Computing,'' warn of the difference between domain
-capabilities and ``common sense,'' and suggest that ``unwarranted
-optimism'' and a particular funding climate (issues also present today)
-push researchers to mask the shortcomings of AI with ``semantic
-shifts'' \cite[p. 14]{ornstein}. We alter the definitions of ``knowledge'' and ``understanding''
-to fit what our machines can do, and these claims, taken literally,
-``give rise to unrealistic confidence in the power of the
-technology'' \cite[p. 15]{ornstein}.
-The two-way process of linguistic and technological change---that
-intelligence gets applied to describe whatever researchers manage to
-achieve, while real ``intelligence'' retreats away from each
-computational advance---leaves these terms poorly defined.
 
 However, the utilitarian model of AI makes good sense for a number of reasons.
 First, much can be achieved with current technologies. Rather than
