--- a/main.bib
+++ b/main.bib
@@ -2106,6 +2106,7 @@
 }
 
 @ARTICLE{economistSR,
+   key = "Look, no hands",
    title = "{L}ook, no hands: {O}ne day every car may come with an invisible chauffeur",
    journal = "The Economist",
    month = "April 20",
@@ -2119,6 +2120,14 @@
    publisher = "MIT Press",
    address = "Cambridge, MA",
    year = "2002",
+}
+
+@TECHREPORT{martinezvela,
+   author = "Carlos Martinez-Vela",
+   title = "{T}he {D}uality of {I}nnovation: {I}mplications for the {R}ole of the {U}niversity in {E}conomic {D}evelopment",
+   institution = "Doctoral Thesis MIT Technology, Management and Policy",
+   month = "February",
+   year = 2007,
 }
 
 
