--- a/intro.tex
+++ b/intro.tex
@@ -578,6 +578,45 @@ optimistic and pessimistic viewpoints.
 
 \subsection{Short-term Promises}
 
+%reduce and deduplicate
+Some articles, especially from more
+scholarly establishments, bring up 
+the pioneering work done by Mercedes and Ernst
+Dickmanns in Germany in the 1990s \cite{HCRIDriverless}. But few connect
+autonomous vehicles today as part of a long research history going
+back to the 1960s, and an even longer set of engineering dreams going
+back at least to the 1920s. 
+
+The few historically-specific 
+dreams that do filter through into the narratives of autonomous
+technology \cite{CBSPetersen} 
+include the 1939 World's Fair, discussed
+in the introduction, at which auto companies
+previewed a city of the future. Its centerpiece, GM's Futurama
+exhibit, presented a bird's-eye view of a future city with multi-lane elevated
+expressways filled with largely automated vehicles. GM's Firebird concepts
+from the 1950s\footnote{Rarely mentioned are other contemporary research
+  initiatives, such as the work of
+  Vladimir Zworykin at RCA. His 
+  concept, inspired by ``railroad block signals,'' used circuits
+  embedded in the road to magnetically sense vehicle speed and
+  location. GM's working test system based on their ``Unicontrol''
+  joystick instead located much of the sensing and control within the car
+itself \cite[p. 8]{wetmore}. But this work too is not often
+remembered.} are also occasionally remembered due to their publicity
+and 
+subsequent cultural presence, \cite{walshVs} despite that the vehicles actually
+contained no autonomous technology \cite[p. 7]{wetmore}. They were
+themselves engineering fictions. DARPA's investments in automated
+driving are recalled more frequently, but largely stripped of their
+military valences and instead seen as the start of a vibrant civilian
+automated car project \cite{economistSR}.
+
+These historical moments are powerful because in their projections into the
+popular discourse, they cease to answer to logic and
+sense. They draw upon emotions, hopes, and aspirations. 
+
+
 One popular vision of this technology is fundamentally optimistic: it
 puts forward the
 idea that self-driving vehicles will be commercially available in as little
